@@ -11,13 +11,33 @@ enum uhuru_mod_status {
   UHURU_MOD_OK,
   UHURU_MOD_INIT_ERROR,
   UHURU_MOD_CONF_ERROR,
+  UHURU_MOD_CLOSE_ERROR,
 };
 
-/* typedef enum uhuru_mod_status (*uhuru_mod_conf_init_t)(void **pmod_conf_data); */
-typedef enum uhuru_mod_status (*uhuru_mod_init_t)(void **pmod_data);
-typedef enum uhuru_mod_status (*uhuru_mod_conf_t)(void *mod_data, const char *key, const char *value);
-typedef enum uhuru_file_status (*uhuru_mod_scan_t)(const char *path, const char *mime_type, void *mod_data, char **pmod_report);
-typedef enum uhuru_mod_status (*uhuru_mod_close)(void *mod_data);
+struct uhuru_module {
+  enum uhuru_mod_status (*init_fun)(void **pmod_data);
+
+  /* FIXME: must export a configuration table as in c_icap */
+  enum uhuru_mod_status (*conf_set)(void *mod_data, const char *key, const char *value);
+
+  /* FIXME: must export a configuration table as in c_icap */
+  char *(*conf_get)(void *mod_data, const char *key);
+
+  enum uhuru_mod_status (*post_init_fun)(void *pmod_data);
+
+  enum uhuru_file_status (*scan_fun)(const char *path, const char *mime_type, void *mod_data, char **pmod_report);
+
+  enum uhuru_mod_status (*close_fun)(void *mod_data);
+
+  const char *name;
+
+  enum uhuru_mod_status mod_status;
+
+  /* FIXME: must move to configuration */
+  const char **mime_types;
+
+  void *data;
+};
 
 #ifdef __cplusplus
 }
