@@ -27,12 +27,11 @@ static char *mod_remote_conf_get(void *mod_data, const char *key)
 }
 
 struct uhuru_module uhuru_mod_remote = {
-  .init = NULL,
+  .init_fun = NULL,
   .conf_set = &mod_remote_conf_set,
   .conf_get = &mod_remote_conf_get,
-  .scan = NULL,
-  .close = NULL,
+  .post_init_fun = NULL,
+  .scan_fun = NULL,
+  .close_fun = NULL,
   .name = "remote",
-  .mime_types = NULL,
-  .data = NULL,
 };
